--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 The Chemical Brothers
             </p>
             <button title="Toggles light & dark" aria-label="auto" aria-live="polite" class="album__action button-reset toggle js-toggle">
-                <svg class="toggle__icon icon icon--add" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
+                <svg class="toggle__icon icon icon--add added" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256">
                     <circle cx="128" cy="128" r="96" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="16" />
                     <line x1="88" y1="128" x2="168" y2="128" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16" />
                     <line x1="128" y1="88" x2="128" y2="168" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16" />
@@ -30,6 +30,7 @@
             </button>
         </header>
     </article>
+    <script src="script/app.js"></script>
 </body>
 
 </html>
